[package]
name = "bwbackup"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"
description = "Create an encrypted backup of your Bitwarden vault"
readme = "README.md"
homepage = "https://github.com/snoyberg/bwbackup"
repository = "https://github.com/snoyberg/bwbackup"
license = "MIT"
keywords = ["bitwarden", "vault", "password"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = "~3.0.0-beta.2"
directories-next = "2"
env_logger = "0.9"
log = "0.4"
rpassword = "5"
sodiumoxide = "0.2.7"
